[package]
name = "irust"
version = "1.5.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Cross Platform Rust Repl"
repository = "https://github.com/sigmaSd/IRust"
license = "MIT"

[dependencies]
crossterm = { version = "0.19.0", features = ["serde"] }
dirs-next = "2.0.0"
once_cell = "1.7.2"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
printer = { path = "printer/", version = "0.2.2" }
libloading = "0.7.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"

# flamegraph
# [profile.release]
# debug = true
