[package]
name = "irust"
version = "1.7.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Cross Platform Rust Repl"
repository = "https://github.com/sigmaSd/IRust"
license = "MIT"

[dependencies]
crossterm = { version = "0.19.0", features = ["serde"] }
dirs-next = "2.0.0"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
printer = { path = "printer/", version = "0.2.4" }
irust_api = { path = "irust_api/", version = "0.1.0" }
irust_repl = { path = "./irust_repl", version = "0.1.0", features = ["serde"] }
libloading = "0.7.0"
bincode = "1.3.3"

[target.'cfg(unix)'.dependencies]
nix = "0.20.0"

# flamegraph
# [profile.release]
# debug = true
