[workspace]
resolver = "2"

members = [
    "crates/irust",
    "crates/printer",
    "crates/irust_api",
    "crates/irust_repl",
]

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }


[profile.release]
strip = true
lto = true


# flamegraph
# [profile.release]
# debug = true
