[package]
name = "irust"
version = "1.67.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Cross Platform Rust Repl"
repository = "https://github.com/sigmaSd/IRust"
license = "MIT"

[dependencies]
crossterm = { version = "0.26.0", features = ["serde","use-dev-tty"] }
dirs = "4.0.0"
toml = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
printer = { path = "../printer/", version = "0.6.0" }
irust_api = { path = "../irust_api/", version = "0.31.0" }
irust_repl = { path = "../irust_repl", version = "0.20.0", features = ["serde"] }
rscript = "0.17.0"
rustc_lexer = { version = "727.0.0", package = "rustc-ap-rustc_lexer" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

# flamegraph
# [profile.release]
# debug = true

