[package]
name = "irust"
version = "1.71.3"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Cross Platform Rust Repl"
repository = "https://github.com/sigmaSd/IRust"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/irust@{ version }/{ name }-{ target }"
pkg-fmt = "bin"

[dependencies]
crossterm = { version = "0.27.0", features = ["serde","use-dev-tty"] }
dirs = "5.0.1"
toml = "0.7.6"
serde = { version = "1.0.188", features = ["derive"] }
printer = { path = "../printer/", version = "0.7.0" }
irust_api = { path = "../irust_api/", version = "0.31.0" }
irust_repl = { path = "../irust_repl", version = "0.24.0", features = ["serde"] }
rscript = "0.17.0"
rustc_lexer = { version = "727.0.0", package = "rustc-ap-rustc_lexer" }
serde_json = "1.0.105"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

# flamegraph
# [profile.release]
# debug = true

