[package]
name = "irust"
version = "1.76.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "Cross Platform Rust Repl"
repository = "https://github.com/sigmaSd/IRust"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/irust@{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
crossterm = { version = "0.29.0", features = ["serde", "use-dev-tty"] }
dirs = "6.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
printer = { path = "../printer/", version = "0.8.0" }
irust_api = { path = "../irust_api/", version = "0.31.0" }
irust_repl = { path = "../irust_repl", version = "0.25.0", features = [
    "serde",
] }
rscript = "0.17.0"
rustc_lexer = { version = "727.0.0", package = "rustc-ap-rustc_lexer" }
serde_json = "1.0.142"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[features]
default = []
no-welcome-screen = []

# flamegraph
# [profile.release]
# debug = true
