[package]
name = "irust_api"
version = "0.31.10"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2024"
description = "IRust API"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/irust_api"
license = "MIT"

[dependencies]
crossterm = { version = "0.29.0", features = ["serde", "use-dev-tty"] }
rscript = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }

[package.metadata.workspaces]
independent = true
