[package]
name = "irust_repl"
version = "0.22.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "IRust Repl abstraction"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/irust_repl"
license = "MIT"

[dependencies]
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"], optional = true }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"

[package.metadata.workspaces]
independent = true
