[package]
name = "irust_repl"
version = "0.24.7"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "IRust Repl abstraction"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/irust_repl"
license = "MIT"

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
uuid = { version = "1.4.1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
dirs = "5.0.1"

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[package.metadata.workspaces]
independent = true
