[package]
name = "irust_repl"
version = "0.25.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "IRust Repl abstraction"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/irust_repl"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
uuid = { version = "1.18.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
dirs = "6.0.0"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[package.metadata.workspaces]
independent = true
