[package]
name = "printer"
version = "0.6.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Abstraction over terminal manipulation"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/printer"
license = "MIT"

[dependencies]
crossterm = {version="0.26.0", features=["use-dev-tty"]}
unicode-width = "0.1.10"

[package.metadata.workspaces]
independent = true
