[package]
name = "printer"
version = "0.6.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Abstraction over terminal manipulation"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/printer"
license = "MIT"

[dependencies]
crossterm = {version="0.26.1", features=["use-dev-tty"]}
unicode-width = "0.1.10"

[package.metadata.workspaces]
independent = true
