[package]
name = "printer"
version = "0.8.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "Abstraction over terminal manipulation"
repository = "https://github.com/sigmaSd/IRust/tree/master/crates/printer"
license = "MIT"

[dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
unicode-width = "0.2.1"

[package.metadata.workspaces]
independent = true
