[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

irust_api.workspace = true
rscript.workspace = true
