[package]
name = "fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"

irust_api.workspace = true
rscript.workspace = true
