[package]
name = "fun"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

irust_api.workspace = true
rscript.workspace = true
