[package]
name = "irust_animation"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
irust_api = { path = "../../crates/irust_api/" }
rscript = "0.15.0"

[lib]
crate-type = ["cdylib"]
