[package]
name = "irust_animation"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
irust_api.workspace = true
rscript.workspace = true

[lib]
crate-type = ["cdylib"]
