[package]
name = "irust_vim_dylib"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossterm = { version = "0.20.0", features = ["serde"] }
irust_api = { path = "../crates/irust_api/" }
once_cell = "1.8.0"
rscript = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }

[lib]
crate-type = ["dylib"]
