[package]
name = "irust_vim_dylib"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irust_api = { path = "../../crates/irust_api/" }
rscript = "0.17.0"

[lib]
crate-type = ["cdylib"]
