[package]
name = "super_add"
version = "0.1.0"
authors = []
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irust_api.workspace = true
rscript.workspace = true

syn = { version = "2.0", features = ["full", "visit-mut"] }
prettyplease = "0.2"
