[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "irust_kernel"
authors = [
    {name = "Bedis Nbiba", email = "bedisnbiba@gmail.com"},
]
dependencies = ["ipykernel"]
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/sigmasd/irust/"
