[package]
name = "input_event"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossterm = {version = "0.19.0", features = ["serde"]}
irust_api = "0.2.0"
once_cell = "1.7.2"
serde = { version = "1.0.125", features = ["derive"] }
