[package]
name = "irust_emacs"
version = "0.1.0"
authors = ["Aloxaf <Aloxafx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossterm = { version = "0.19.0", features = ["serde"] }
irust_api = {path = "../../../crates/irust_api" }
serde = { version = "1.0.125", features = ["derive"] }
